# irsl_switch_controller

./: CMakeLists.txt
include/: core.h  loop_timer.h  thread_pool.h
src/: switch_controller.cpp
